*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8613 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -124,7 +124,7 @@ foxtrick.LinksAchievements.desc=Añadir algunos enlaces externos a la página de
 foxtrick.LinksStaff.desc=Añadir algunos enlaces externos a la página del Staff
 foxtrick.LinksTracker.desc=Añadir algunos enlaces externos a las correspondientes bases de datos nacionales dentro detro de las páginas de jugadores y selecciones.
 foxtrick.LinksClubTransfers.desc=Añadir algunos enlaces externos a la página de Transferencias
-foxtrick.LoyaltyDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu pÃ¡gina personal del jugador (sÃ³lo funciona con la opciÃ³n "Mostrar barras de habilidades" activada en las preferencias de HT)
+foxtrick.LoyalityDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu pÃ¡gina personal del jugador (sÃ³lo funciona con la opciÃ³n "Mostrar barras de habilidades" activada en las preferencias de HT)
 foxtrick.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes
 foxtrick.Singleline2.desc=Modulo con encabezado del foro alternativo de una línea. Un poco más rapido que las otras versiones. Deshabilita algunos mensajes del foro conflictivos.
 # please translate next lines again if needed
@@ -676,8 +676,8 @@ Stamina.abbr=Con
 Form=Form
 Form.abbr=Fo
 
-Loyalty=Lelatad
-Loyalty.abbr=Le
+Loyality=Lelatad
+Loyality.abbr=Le
 MotherClubBonus=Bono de club madre
 MotherClubBonus.abbr=BCM
 
