--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -388,8 +388,8 @@ Stamina.abbr=Res
 Form=Forma
 Form.abbr=Fo
 
-Loyalty=Lealdade
-Loyalty.abbr=Le
+Loyality=Lealdade
+Loyality.abbr=Le
 MotherClubBonus=Bonus por club nai
 MotherClubBonus.abbr=CNB
 
