--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -504,8 +504,8 @@ Stamina.abbr=Izd
 Form=Forma
 Form.abbr=For
 
-Loyalty=Odanost
-Loyalty.abbr=Od
+Loyality=Odanost
+Loyality.abbr=Od
 MotherClubBonus=Bonus matičnoga kluba
 
 Status=Status
