--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -673,8 +673,8 @@ Stamina.abbr=Res
 Form=Forma
 Form.abbr=For
 
-Loyalty=Fedeltà
-Loyalty.abbr=Fe
+Loyality=Fedeltà
+Loyality.abbr=Fe
 MotherClubBonus.abbr=BO
 
 Status=Stato
