--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -127,7 +127,7 @@ foxtrick.LinksAchievements.desc=업적 페이지에 몇 개의 외부 링크 추
 foxtrick.LinksStaff.desc=직원 페이지에 몇 개의 외부 링크 추가
 foxtrick.LinksTracker.desc=국가 대표 팀과 대표 팀 선수 페이지에 몇 개의 외부 링크 추가
 foxtrick.LinksClubTransfers.desc=클럽 이적 페이지에 몇 개의 외부 링크 추가
-foxtrick.LoyaltyDisplay.desc=선수 페이지에 충성도와 모 클럽 보너스 효과 강조 (HT 환경설정에서 'Show skill bars' 옵션이 활성화되어 있을 때만 동작합니다)
+foxtrick.LoyalityDisplay.desc=선수 페이지에 충성도와 모 클럽 보너스 효과 강조 (HT 환경설정에서 'Show skill bars' 옵션이 활성화되어 있을 때만 동작합니다)
 foxtrick.ForumAlterHeaderLine.desc=포스팅 머리글 라인 변경
 foxtrick.Singleline2.desc=대체 토론장 머리글 싱글 라인 모듈. 다른 버전보다 약간 더 빠릅니다. 모듈을 변경하는 몇 가지 충돌을 일으키는 토론장 포스트를 비활성화합니다.
 # please translate next lines again if needed
@@ -422,8 +422,8 @@ foxtrick.links.boxheader=링크
 
 #teamstats+filters
 foxtrick.TeamStats.label=팀 개요
-foxtrick.TeamStats.PlayerNotToOld.label=19세 미만 선수
-foxtrick.TeamStats.PlayerToOld.label=19세 이상 선수
+foxtrick.TeamStats.PlayerNotToOld.label=19세 미만
+foxtrick.TeamStats.PlayerToOld.label=19세 이상
 foxtrick.TeamStats.Cards.label=카드
 foxtrick.TeamStats.Injured.label=부상
 foxtrick.TeamStats.TransferListed.label=이적 목록에 있음
@@ -545,12 +545,12 @@ Filters.addFilterOptions=필터 옵션 추가
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
-foxtrick.datetimestrings.days=일
-foxtrick.datetimestrings.hours=시
-foxtrick.datetimestrings.minutes=분
-foxtrick.datetimestrings.short_seasons=s
-foxtrick.datetimestrings.short_weeks=w
-foxtrick.datetimestrings.short_days=d
+foxtrick.datetimestrings.days=일;일
+foxtrick.datetimestrings.hours=시;시
+foxtrick.datetimestrings.minutes=분;분
+foxtrick.datetimestrings.short_seasons=s;s
+foxtrick.datetimestrings.short_weeks=wk;wk
+foxtrick.datetimestrings.short_days=d;d
 
 #Transfer prices
 transfercompare_medianprice=중간 가격
@@ -580,19 +580,19 @@ matchOrder.summary=요약
 
 #Skills
 Playmaking=플레이메이킹
-Playmaking.abbr=플레
+Playmaking.abbr=플
 Winger=윙어
 Winger.abbr=윙
 Scoring=득점력
-Scoring.abbr=득점
+Scoring.abbr=득
 Passing=패스력
-Passing.abbr=패스
+Passing.abbr=패
 Defending=수비력
-Defending.abbr=수비
+Defending.abbr=수
 Keeper=골키핑
-Keeper.abbr=골키
+Keeper.abbr=키
 Set_pieces=세트 피스
-Set_pieces.abbr=세트
+Set_pieces.abbr=세
 
 PsicoTSI=PsicoTSI (평균 컨디션)
 PsicoTSI.abbr=Psico
@@ -664,26 +664,26 @@ CanBePromotedIn.abbr=Prom
 
 Personality=성격
 Agreeability=호감도
-Agreeability.abbr=호감
+Agreeability.abbr=호
 Aggressiveness=적극성
-Aggressiveness.abbr=적극
+Aggressiveness.abbr=적
 Honesty=공정함
-Honesty.abbr=공정
+Honesty.abbr=공
 
 Leadership=리더십
-Leadership.abbr=리더
+Leadership.abbr=리
 Experience=경험
-Experience.abbr=경험
+Experience.abbr=경
 
 Stamina=체력
-Stamina.abbr=체력
+Stamina.abbr=체
 Form=Form
 Form.abbr=Fo
 
-Loyalty=충성도
-Loyalty.abbr=충성
+Loyality=충성도
+Loyality.abbr=충
 MotherClubBonus=모 클럽 보너스
-MotherClubBonus.abbr=모클
+MotherClubBonus.abbr=모
 
 Status=상태
 Status.abbr=상태
