--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -289,8 +289,8 @@ Stamina.abbr=Izt
 Form=Forma
 Form.abbr=Forma
 
-Loyalty=Lojalitāte
-Loyalty.abbr=Loj
+Loyality=Lojalitāte
+Loyality.abbr=Loj
 MotherClubBonus=Māteskluba bonuss
 MotherClubBonus.abbr=MB
 
