--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -387,7 +387,7 @@ ForumYouthIcons.youthmatchid=Adicionar link para jogo de junior
 ForumYouthIcons.youthseries=Adicionar link para grupo de junior
 
 ForumOtherIcons.label=Outros
-ForumOtherIcons.debug=Inserir FoxTrick log de depuração.
+ForumOtherIcons.debug=Inserir log de depuração do FoxTrick.
 ForumOtherIcons.settings=Insira as configurações do FoxTrick.
 
 #special bbcode, not really youth icons
@@ -533,7 +533,7 @@ Stamina.abbr=Resist
 Form=Forma
 Form.abbr=Fo
 
-Loyalty=Lealdade
+Loyality=Lealdade
 MotherClubBonus=Bônus de clube de origem
 
 Status=Status
