--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -476,8 +476,8 @@ Stamina.abbr=STM
 Form=Forma
 Form.abbr=FO
 
-Loyalty=Lealdade
-Loyalty.abbr=Lo
+Loyality=Lealdade
+Loyality.abbr=Lo
 MotherClubBonus=Bónus de Clube-Mãe
 MotherClubBonus.abbr=MB
 
