--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -38,7 +38,7 @@ foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Shows nested quotes in a 
 #EmbedMedia
 #Forum direct page links
 #
-foxtrick.LoyaltyDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
+foxtrick.LoyalityDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.CheckDesign.desc=Checks whether a single header line breaks the design and displays the message header for that post in two lines if needed. This feature slows down display of the page.
 foxtrick.ConfirmActions.StaffChange.desc=Hiring/firing staff
@@ -160,7 +160,7 @@ CanBePromotedIn=Could be promoted in
 
 
 
-Loyalty=Loyalty
+Loyality=Loyalty
 MotherClubBonus=Mother club bonus
 
 
