--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -333,7 +333,7 @@ Experience=Izkušnje
 Stamina=Vzdržljivost
 Form=Pripravljenost
 
-Loyalty=Pripadnost
+Loyality=Pripadnost
 MotherClubBonus=Bonus matičnega kluba
 
 Status=Stanje
