*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8625 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -420,7 +420,6 @@ foxtrick.TeamStats.ActivePlayers.label=Aktive Spieler
 foxtrick.TeamStats.HomeGrownPlayers.label=Eigengewächse
 foxtrick.TeamStats.PurchasedPlayers.label=Gekaufte
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Saisonübersicht
@@ -660,8 +659,8 @@ Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
 
-Loyality=Treue
-Loyality.abbr=Tr
+Loyalty=Treue
+Loyalty.abbr=Tr
 MotherClubBonus=Heimatvereinbonus
 MotherClubBonus.abbr=HB
 
