--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -38,7 +38,7 @@ foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Shows nested quotes in a 
 #EmbedMedia
 #Forum direct page links
 #
-foxtrick.LoyalityDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
+foxtrick.LoyaltyDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
 # please translate next lines again if needed
 foxtrick.ForumAlterHeaderLine.CheckDesign.desc=Checks whether a single header line breaks the design and displays the message header for that post in two lines if needed. This feature slows down display of the page.
 foxtrick.ConfirmActions.StaffChange.desc=Hiring/firing staff
@@ -94,7 +94,7 @@ YouthPromotes.future=Player can be promoted %1 day later, on %2.;Player can be p
 #teamstats+filters
 foxtrick.TeamStats.NotPlayedLatest.label=Did not play in last match
 foxtrick.TeamStats.HomeGrownPlayers.label=Home grown players
-
+foxtrick.TeamStats.FilterFor=Filter for
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -160,7 +160,8 @@ CanBePromotedIn=Could be promoted in
 
 
 
-Loyality=Loyalty
+Loyalty=Loyalty
+Loyalty.abbr=Lo
 MotherClubBonus=Mother club bonus
 
 
