--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -124,7 +124,7 @@ foxtrick.LinksAchievements.desc=Añadir algunos enlaces externos a la página de
 foxtrick.LinksStaff.desc=Añadir algunos enlaces externos a la página del Staff
 foxtrick.LinksTracker.desc=Añadir algunos enlaces externos a las correspondientes bases de datos nacionales dentro detro de las páginas de jugadores y selecciones.
 foxtrick.LinksClubTransfers.desc=Añadir algunos enlaces externos a la página de Transferencias
-foxtrick.LoyalityDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu pÃ¡gina personal del jugador (sÃ³lo funciona con la opciÃ³n "Mostrar barras de habilidades" activada en las preferencias de HT)
+foxtrick.LoyaltyDisplay.desc=Resalta el efecto de la lealtad y el bono del club madre en tu pÃ¡gina personal del jugador (sÃ³lo funciona con la opciÃ³n "Mostrar barras de habilidades" activada en las preferencias de HT)
 foxtrick.ForumAlterHeaderLine.desc=Altera el encabezado de los mensajes
 foxtrick.Singleline2.desc=Modulo con encabezado del foro alternativo de una línea. Un poco más rapido que las otras versiones. Deshabilita algunos mensajes del foro conflictivos.
 # please translate next lines again if needed
@@ -432,7 +432,6 @@ foxtrick.TeamStats.ActivePlayers.label=Jugadores activos
 foxtrick.TeamStats.HomeGrownPlayers.label=Jugadores canteranos
 foxtrick.TeamStats.PurchasedPlayers.label=Jugadores comprados
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Resumen Temporada
@@ -676,8 +675,8 @@ Stamina.abbr=Con
 Form=Form
 Form.abbr=Fo
 
-Loyality=Lelatad
-Loyality.abbr=Le
+Loyalty=Lelatad
+Loyalty.abbr=Le
 MotherClubBonus=Bono de club madre
 MotherClubBonus.abbr=BCM
 
