--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -349,6 +349,7 @@ foxtrick.ShowLineupSet.LineupSet.desc=Destaca los equipos que han establecido al
 foxtrick.ShowLineupSet.Ownerless.desc=Destaca equipos sin dueño
 foxtrick.ShowLineupSet.Winning.desc=Destaca equipos ganadores
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
+foxtrick.MobileEnhancements.desc=Conjunto de mejoras para dispositivos móviles
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Destaca los jugadores que jugaron en el último partido y muestra la última posición y el tiempo jugado en los detalles
 foxtrick.MatchOrderInterface.Specialties.desc=Mostrar especialidades de jugadores
 foxtrick.MatchOrderInterface.SwapPositions.desc=Añade un enlace para cambiar los jugadores de izq. a dcha.
@@ -406,7 +407,7 @@ foxtrick.TeamStats.NotPlayedLatest.label=No jugaron el último partido
 foxtrick.TeamStats.ActivePlayers.label=Jugadores activos
 foxtrick.TeamStats.HomeGrownPlayers.label=Canteranos
 foxtrick.TeamStats.PurchasedPlayers.label=Jugadores comprados
-
+foxtrick.TeamStats.FilterFor=Filtro para
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -504,9 +505,11 @@ Filters.filter=Aceptar
 Filters.noFilter=Ningún filtro
 Filters.none=Ninguno
 Filters.days=Días
+Filters.stamina=Resistencia
 Filters.XP=Experiencia
 Filters.specialty=Especialidad
 Filters.stars=Estrellas
+Filters.addFilterOptions=Añadir opciones de filtro
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -540,6 +543,8 @@ matchOrder.previousPrediction=Predicción anterior
 matchOrder.AddMatchManually=Añadir un partido manualmente
 matchOrder.swapPositions=Cambiar posiciones
 matchOrder.options=Opciones
+matchOrder.staminaDiscount=Descuento de resistencia
+matchOrder.staminaDiscount.title=Las calificaciones del sector son descontadas según el aporte de jugadores a ese sector
 matchOrder.summary=Resumen
 
 #Skills
@@ -581,6 +586,9 @@ categories.E2=E2
 
 match.pos.lw=Extremo izquierdo
 match.pos.rw=Extremo derecho
+match.pos.lf=Delantero izquierdo
+match.pos.mf=Delantero centro
+match.pos.rf=Delantero derecho
 
 match.role.captain=Capitán
 match.role.captain.abbr=Capi
@@ -614,7 +622,7 @@ Stamina.abbr=Con
 Form=forma
 Form.abbr=Fo
 
-Loyality=Fidelidaz
+Loyalty=Fidelidaz
 
 Status=Estado
 Status.abbr=Estado
@@ -631,6 +639,7 @@ Last_match=Último partido
 Last_match.abbr=Último
 Last_stars=Última calificación
 Last_stars.abbr=Cal
+Last_stars_EndOfGame=Ultimas estrellas al final de la partida
 Last_stars_decline=Último descenso estrella
 Last_position=Última posición
 Last_position.abbr=pos
