--- a/content/locale/fa/foxtrick.properties
+++ b/content/locale/fa/foxtrick.properties
@@ -372,7 +372,6 @@ foxtrick.TeamStats.Pictures.label=چهره
 foxtrick.TeamStats.PlayedLatest.label=در بازي اخر بازي کرده
 foxtrick.TeamStats.NotPlayedLatest.label=در بازي اخر بازي نکرده
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=اطلاعات فصل
@@ -579,8 +578,8 @@ Stamina.abbr=Stm
 Form=فرم
 Form.abbr=Fo
 
-Loyality=وفاداری
-Loyality.abbr=وفاداری
+Loyalty=وفاداری
+Loyalty.abbr=وفاداری
 MotherClubBonus=سهم باشگاه مادر
 MotherClubBonus.abbr=سهم باشگاه مادر
 
