--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -127,7 +127,7 @@ foxtrick.LinksAchievements.desc=업적 페이지에 몇 개의 외부 링크 추
 foxtrick.LinksStaff.desc=직원 페이지에 몇 개의 외부 링크 추가
 foxtrick.LinksTracker.desc=국가 대표 팀과 대표 팀 선수 페이지에 몇 개의 외부 링크 추가
 foxtrick.LinksClubTransfers.desc=클럽 이적 페이지에 몇 개의 외부 링크 추가
-foxtrick.LoyalityDisplay.desc=선수 페이지에 충성도와 모 클럽 보너스 효과 강조 (HT 환경설정에서 'Show skill bars' 옵션이 활성화되어 있을 때만 동작합니다)
+foxtrick.LoyaltyDisplay.desc=선수 페이지에 충성도와 모 클럽 보너스 효과 강조 (HT 환경설정에서 'Show skill bars' 옵션이 활성화되어 있을 때만 동작합니다)
 foxtrick.ForumAlterHeaderLine.desc=포스팅 머리글 라인 변경
 foxtrick.Singleline2.desc=대체 토론장 머리글 싱글 라인 모듈. 다른 버전보다 약간 더 빠릅니다. 모듈을 변경하는 몇 가지 충돌을 일으키는 토론장 포스트를 비활성화합니다.
 # please translate next lines again if needed
@@ -434,7 +434,7 @@ foxtrick.TeamStats.NotTransferListed.label=이적 목록에 없음
 foxtrick.TeamStats.ActivePlayers.label=활동하는 선수
 foxtrick.TeamStats.HomeGrownPlayers.label=승격한 선수
 foxtrick.TeamStats.PurchasedPlayers.label=이적된 선수
-
+foxtrick.TeamStats.FilterFor=필터링
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -580,19 +580,19 @@ matchOrder.summary=요약
 
 #Skills
 Playmaking=플레이메이킹
-Playmaking.abbr=플
+Playmaking.abbr=플레
 Winger=윙어
 Winger.abbr=윙
 Scoring=득점력
-Scoring.abbr=득
+Scoring.abbr=득점
 Passing=패스력
-Passing.abbr=패
+Passing.abbr=패스
 Defending=수비력
-Defending.abbr=수
+Defending.abbr=수비
 Keeper=골키핑
-Keeper.abbr=키
+Keeper.abbr=골키
 Set_pieces=세트 피스
-Set_pieces.abbr=세
+Set_pieces.abbr=세트
 
 PsicoTSI=PsicoTSI (평균 컨디션)
 PsicoTSI.abbr=Psico
@@ -671,19 +671,19 @@ Honesty=공정함
 Honesty.abbr=공
 
 Leadership=리더십
-Leadership.abbr=리
+Leadership.abbr=리더
 Experience=경험
-Experience.abbr=경
+Experience.abbr=경험
 
 Stamina=체력
-Stamina.abbr=체
+Stamina.abbr=체력
 Form=Form
 Form.abbr=Fo
 
-Loyality=충성도
-Loyality.abbr=충
+Loyalty=충성도
+Loyalty.abbr=충성
 MotherClubBonus=모 클럽 보너스
-MotherClubBonus.abbr=모
+MotherClubBonus.abbr=모클
 
 Status=상태
 Status.abbr=상태
