--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -125,7 +125,7 @@ foxtrick.LinksAchievements.desc=Toon een aantal nuttige externe links op de mijl
 foxtrick.LinksStaff.desc=Toon een aantal nuttige externe links op de stafpagina
 foxtrick.LinksTracker.desc=Toon een aantal zogenaamde tracker links naar de bijbehorende NT en spelerspagina's
 foxtrick.LinksClubTransfers.desc=Toon een aantal nuttige externe links op de transferpagina van een club
-foxtrick.LoyalityDisplay.desc=Benadruk het effect van loyaliteit en moederclub bonus op de individuele speler's pagina. (Werkt alleen als "Laat skill bars zien"-optie aan staat in Hattrick's website voorkeuren)
+foxtrick.LoyaltyDisplay.desc=Benadruk het effect van loyaliteit en moederclub bonus op de individuele speler's pagina. (Werkt alleen als "Laat skill bars zien"-optie aan staat in Hattrick's website voorkeuren)
 foxtrick.ForumAlterHeaderLine.desc=Wijzig de berichtkop
 foxtrick.Singleline2.desc=Alternatieve éénregelige berichtkop. Iets sneller dan de andere versies. Schakelt aantal conflicterende forum modules uit.
 # please translate next lines again if needed
@@ -433,7 +433,6 @@ foxtrick.TeamStats.ActivePlayers.label=Actieve spelers
 foxtrick.TeamStats.HomeGrownPlayers.label=Eigen spelers
 foxtrick.TeamStats.PurchasedPlayers.label=Gekochte spelers
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Seizoensoverzicht
@@ -678,8 +677,8 @@ Stamina.abbr=Co
 Form=Vorm
 Form.abbr=Vo
 
-Loyality=Loyaliteit
-Loyality.abbr=Lo
+Loyalty=Loyaliteit
+Loyalty.abbr=Lo
 MotherClubBonus=Moederclub bonus
 MotherClubBonus.abbr=MB
 
