--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -323,7 +323,6 @@ foxtrick.TeamStats.ActivePlayers.label=Jogadores ativos
 foxtrick.TeamStats.HomeGrownPlayers.label=Jogadores recrutados pelo time
 foxtrick.TeamStats.PurchasedPlayers.label=Jogadores comprados
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Season overview
@@ -533,7 +532,7 @@ Stamina.abbr=Resist
 Form=Forma
 Form.abbr=Fo
 
-Loyality=Lealdade
+Loyalty=Lealdade
 MotherClubBonus=Bônus de clube de origem
 
 Status=Status
