--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -282,7 +282,6 @@ foxtrick.TeamStats.ActivePlayers.label=Jogadores ativos
 foxtrick.TeamStats.HomeGrownPlayers.label=Jogadores caseiros
 foxtrick.TeamStats.PurchasedPlayers.label=Jogadores comprados
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Visão geral da temporada
@@ -476,8 +475,8 @@ Stamina.abbr=STM
 Form=Forma
 Form.abbr=FO
 
-Loyality=Lealdade
-Loyality.abbr=Lo
+Loyalty=Lealdade
+Loyalty.abbr=Lo
 MotherClubBonus=Bónus de Clube-Mãe
 MotherClubBonus.abbr=MB
 
