--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -126,7 +126,7 @@ foxtrick.LinksAchievements.desc=Na stránku úspěchů přidává externí odkaz
 foxtrick.LinksStaff.desc=Na stránku zaměstnanců přidává externí odkazy.
 foxtrick.LinksTracker.desc=Na příslušné stránky národních týmů a reprezentačních hráčů přidává externí odkazy na trackery
 foxtrick.LinksClubTransfers.desc=Na stránku týmové historie přestupů přidává externí odkazy
-foxtrick.LoyalityDisplay.desc=Zvýraznit vliv oddanosti a odchovaneckého bonusu na stránce hráče (funguje jen v případě, že na HT nastavíte zobrazení dovedností graficky)
+foxtrick.LoyaltyDisplay.desc=Zvýraznit vliv oddanosti a odchovaneckého bonusu na stránce hráče (funguje jen v případě, že na HT nastavíte zobrazení dovedností graficky)
 foxtrick.ForumAlterHeaderLine.desc=Upravuje záhlaví příspěvku.
 foxtrick.Singleline2.desc=Alternativní modul jednořádkového záhlaví konferenčních příspěvků, který je o něco rychlejší, než jiné verze. Vypne některé konfliktní moduly upravující konferenční příspěvky.
 # please translate next lines again if needed
@@ -434,7 +434,6 @@ foxtrick.TeamStats.ActivePlayers.label=Aktivní hráči
 foxtrick.TeamStats.HomeGrownPlayers.label=Odchovanci
 foxtrick.TeamStats.PurchasedPlayers.label=Zakoupení hráči
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Souhrn sezóny
@@ -678,8 +677,8 @@ Stamina.abbr=Kon
 Form=Forma
 Form.abbr=Fo
 
-Loyality=Oddanost
-Loyality.abbr=Odd
+Loyalty=Oddanost
+Loyalty.abbr=Odd
 MotherClubBonus=Odchovanecký bonus
 MotherClubBonus.abbr=Odch
 
