--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -117,7 +117,6 @@ foxtrick.TeamStats.PlayedLatest.label=Spēlēja pēdējā spēlē
 foxtrick.TeamStats.NotPlayedLatest.label=Nespēlēja pēdējā spēlē
 foxtrick.TeamStats.NotTransferListed.label=Nav izlikti pārdošanā
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Sezonas pārskats
@@ -289,8 +288,8 @@ Stamina.abbr=Izt
 Form=Forma
 Form.abbr=Forma
 
-Loyality=Lojalitāte
-Loyality.abbr=Loj
+Loyalty=Lojalitāte
+Loyalty.abbr=Loj
 MotherClubBonus=Māteskluba bonuss
 MotherClubBonus.abbr=MB
 
