--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -419,7 +419,6 @@ foxtrick.TeamStats.ActivePlayers.label=Aktiva spelare
 foxtrick.TeamStats.HomeGrownPlayers.label=Egna produkter
 foxtrick.TeamStats.PurchasedPlayers.label=Inköpta spelare
 
-
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Säsongsöversikt
@@ -661,8 +660,8 @@ Stamina.abbr=Ko
 Form=Form
 Form.abbr=Fo
 
-Loyality=Klubbkänsla
-Loyality.abbr=Kk
+Loyalty=Klubbkänsla
+Loyalty.abbr=Kk
 MotherClubBonus=Moderklubbsbonus
 MotherClubBonus.abbr=MoBo
 
