--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -13,6 +13,17 @@
 <item>Уколико желите да вам Фокстрик не приказује обавештење о променама после сваког ажурирања искључите опцију "Прикажи поруку о променама после ажурирања Фокстрика" у табу <xhtml:a href="#tab=main">"Главне опције"</xhtml:a>.</item>
 </note>
 
+<note version="0.9">
+<item>Велики број ажурираних превода. (Catzhoek и многи други преводиоци. Између осталих: GM-murko, LambdaB, Paulo Francisco Martins, </item>
+<item>MEO_Comandante, Jānis Pamiljans, GZ-grobas, SI-CH, bigpapy, edzus, silkevicious, Max_Schreck, Zayc)</item>
+<item>Хвала свима. Молимо вас да наставите да преводите FoxTrick на <xhtml:a href="http://crowdin.net/project/foxtrick">http://crowdin.net/project/foxtrick</xhtml:a></item>
+<item>За више информација погледајте [post=15466991.1] или [post=15466972.1]</item>
+<item>Многе интерне промене (ryanli, convincedd)</item>
+<item><module>Ratings</module>: Опција за скривање Хеттрикових просечних оцена (convinced)</item>
+<item>Линкови за мечеве адаптирани променама на Хеттрику (Catzhoek)</item>
+<item>Уклоњене опције LeagueChat и HeaderFixFlickerFix (convincedd)</item>
+</note>
+
 <note version="0.8.2">
 <item>Корејански језик (SI-CH)</item>
 <item>Литвански језик (LA-MJ)</item>
