*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8657 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -18,20 +18,50 @@ pluralFormRuleID=pluralFormRule1
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 #AttVsDef
 #Ratings
+foxtrick.Ratings.HatStats.desc=HatStats
+foxtrick.Ratings.LoddarStats.desc=LoddarStats
+foxtrick.Ratings.PeasoStats.desc=PeasoStats
+foxtrick.Ratings.VnukStats.desc=VnukStats
+foxtrick.Ratings.HTitaVal.desc=HTitaVal
+foxtrick.Ratings.GardierStats.desc=GardierStats
 #MedianTransferPrice
 #ForumYouthIcons
 #FormatPostingText
 #EmbedMedia
 #Forum direct page links
 #
+foxtrick.LinksTeam.desc=Lisa mõned viidad meeskonna lehele
+foxtrick.LinksCountry.desc=Lisa mõned viidad riigi lehele
+foxtrick.LinksChallenges.desc=Lisa mõned viidad väljakutsete lehele
 # please translate next lines again if needed
+foxtrick.TeamStats.Speciality.desc=Erioskus
+foxtrick.TeamStats.Personality.desc=Iseloom
+foxtrick.SeniorTeamShortCuts.AllPages.desc=Kuva kõigil lehtedel
 #ExtendedPlayerDetails
+foxtrick.SimplePresentation.HideAchievementsIcons.desc=Peidab saavutuste lehel ikoonid
+foxtrick.SimplePresentation.NoLogo.desc=Peidab meeskonna logod
 #ExtraShortcuts
+foxtrick.ExtraShortcuts.HtRadio.desc=HtRadio
+foxtrick.ExtraShortcuts.No9.desc=No9 Radio
+foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
+foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
 #MoveManagerOnline
+foxtrick.TeamPopupLinks.Matches.desc=Mängud
+foxtrick.TeamPopupLinks.Players.desc=Mängijad
+foxtrick.TeamPopupLinks.last_5_ips.desc=5 viimast sisselogimist
+foxtrick.TeamPopupLinks.Guestbook.desc=Külalisteraamat
+foxtrick.TeamPopupLinks.Challenge.desc=Kutsu välja
+foxtrick.TeamPopupLinks.Achievements.desc=Saavutused
+foxtrick.TeamPopupLinks.TransferHistory.desc=Üleminekute ajalugu
+foxtrick.TeamPopupLinks.TeamHistory.desc=Klubi ajalugu
+foxtrick.TeamPopupLinks.LastLineup.desc=Viimase mängu rivistus
+foxtrick.TeamPopupLinks.NextMatch.desc=Saada HT-mail
+foxtrick.TeamPopupLinks.Coach.desc=Treener
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
+foxtrick.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
 
 # -----------------------------------------------------------------------------
 
@@ -46,10 +76,13 @@ pluralFormRuleID=pluralFormRule1
 
 # YouthPromotes
 #following string uses pluralForms
+YouthPromotes.today=Mängijat võib edutada\!
 
 # links
 
 #teamstats+filters
+foxtrick.TeamStats.Injured.label=Vigastatud
+foxtrick.TeamStats.TransferListed.label=Müüginimekirjas
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -142,6 +175,7 @@ pluralFormRuleID=pluralFormRule1
 # This would look like: Copy player ID: 123456789
 
 #teampopups
+Guestbook=Külalisteraamat
 
 
 # FlagCollectionToMap
@@ -178,8 +212,11 @@ pluralFormRuleID=pluralFormRule1
 # MarkAllAsRead
 
 # TickerAlert
+TickerAlert.enable=Luba
 
 # tickers
+ticker.type.guestbook=Külalisteraamat
+ticker.type.mail=HT-Mail
 
 # LocalTime
 
