--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -79,6 +79,9 @@ foxtrick.SkillTable.desc=Rādīt spēlētāju prasmes tabulā.
 foxtrick.SkillTable.ColouredYouth.desc=Attēlot iekrāsotas jauniešu prasmes
 #HighlightCupwins
 #CountryList
+foxtrick.ShowLineupSet.LineupSet.desc=Izcelt komandas, kas uzstādījušas spēles rīkojumus
+foxtrick.ShowLineupSet.Ownerless.desc=Izcelt bezīpašnieka komandas
+foxtrick.ShowLineupSet.Winning.desc=Izcelt uzvarētāju komandas
 foxtrick.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitātes
 
 # -----------------------------------------------------------------------------
@@ -97,8 +100,13 @@ foxtrick.ExtraShortcuts.ftprefs=FoxTrick uzstādījumi
 
 #HistoryStats
 foxtrick.HistoryStats.season=Sezona
+foxtrick.HistoryStats.season.short=S
 foxtrick.HistoryStats.cup=Kausa kārta
+foxtrick.HistoryStats.cup.short=K
+foxtrick.HistoryStats.league=Līga
+foxtrick.HistoryStats.pos.short=P
 foxtrick.HistoryStats.cupwinner=Kausa ieguvējs
+foxtrick.HistoryStats.cupwinner.short=KU
 
 # YouthPromotes
 #following string uses pluralForms
@@ -109,6 +117,8 @@ foxtrick.links.boxheader=Saites
 
 #teamstats+filters
 foxtrick.TeamStats.label=Komandas pārskats
+foxtrick.TeamStats.PlayerNotToOld.label=Spēlētāji < 19
+foxtrick.TeamStats.PlayerToOld.label=Spēlētāji >\= 19
 foxtrick.TeamStats.Cards.label=Kartītes
 foxtrick.TeamStats.Injured.label=Savainoti
 foxtrick.TeamStats.TransferListed.label=Izlikti pārdošanā
@@ -116,18 +126,33 @@ foxtrick.TeamStats.Pictures.label=Sejas
 foxtrick.TeamStats.PlayedLatest.label=Spēlēja pēdējā spēlē
 foxtrick.TeamStats.NotPlayedLatest.label=Nespēlēja pēdējā spēlē
 foxtrick.TeamStats.NotTransferListed.label=Nav izlikti pārdošanā
+foxtrick.TeamStats.ActivePlayers.label=Aktīvie spēlētāji
+foxtrick.TeamStats.PurchasedPlayers.label=Nopirktie spēlētāji
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 foxtrick.seasonstats.boxheader=Sezonas pārskats
 
+foxtrick.seasonstats.played=Sp
+foxtrick.seasonstats.won=U
+foxtrick.seasonstats.draw=N
+foxtrick.seasonstats.lost=Z
+foxtrick.seasonstats.goalplus=VG
+foxtrick.seasonstats.goalminus=VI
 foxtrick.seasonstats.goaldiff=±
+foxtrick.seasonstats.total=K
+foxtrick.seasonstats.home=M
+foxtrick.seasonstats.away=V
 foxtrick.seasonstats.league=Līgas spēles
 foxtrick.seasonstats.friendly=Draudzības spēles
 foxtrick.seasonstats.cup=Kauss
+foxtrick.seasonstats.masters=Masters
 
 
 #Newsfeed filter
+foxtrick.LeagueNewsFilter.Filter=Jaunumu filtrs\:
+foxtrick.LeagueNewsFilter.all=Viss
+foxtrick.LeagueNewsFilter.friendlies=Draudzības spēles un mainītie treneri
 foxtrick.LeagueNewsFilter.transfers=Darījumi
 foxtrick.LeagueNewsFilter.lineup_changes=Spēlētāju izkārtojuma izmaiņas
 
@@ -137,7 +162,13 @@ leave_conf_button=Atstāt diskusiju telpu
 forum.preferences=Diskusiju uzstādījumi
 
 # ForumTemplates
+make_template_from_post=Izveidot veidni no ziņojuma
+show_templates=Rādīt veidnes
+hide_templates=Slēpt veidnes
+template_exists=Veidne jau eksistē vai ir tukša
 template_title=Veidnes nosaukums\:
+template_title_illegal='[' un ']' nav atļauti virsrakstos
+delete_template_ask=Dzēst veidni?
 
 #PostPreview
 show_preview_from_post=Parādīt ziņas priekšskatījumu
@@ -145,16 +176,34 @@ preview=Priekšskatīt
 forumPreview.send=Nosūtīt
 
 #Forums
+foxtrick.CopyPostID=Kopēt PostID starpliktuvē
+CopyPosting=Kopēt ziņu %s stilā
+CopyPosting.abbr=Kopēt %s stilā
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
 
 
 
 #special bbcode, not really youth icons
+ForumSpecialBBCode.tableSeparator=Konvertēt "%s" šūnās
+ForumSpecialBBCode.enterSeparator=Ievadiet pielāgotu atdalītāju
+ForumSpecialBBCode.forumSymbol=Ievietot "%s"
+ForumSpecialBBCode.symbols=Ievietot simbolu\: %s
 
 
 
 #Transferlistfilters
+foxtrick.transferfilter.Enter_filter_name=Ievadiet filtra nosaukumu\:
+foxtrick.transferfilter.delete_filter_ask=Vai tiešām vēlaties izdzēst šo filtru?
+foxtrick.transferfilter.save_new_filter=Saglabāt jaunu filtru
+foxtrick.transferfilter.Foxtrick_Filters=FoxTrick filtri
 
 #Filter
+Filters=Filtri
+Filters.filter=Labi
+Filters.clear=Notīrīt
+Filters.noFilter=Nav filtru
+Filters.none=Neviens
 Filters.days=Dienas
 Filters.tsi=TSI
 Filters.stamina=Izturība
@@ -171,6 +220,7 @@ foxtrick.datetimestrings.hours=st.
 foxtrick.datetimestrings.minutes=min
 
 #Transfer prices
+transfercompare_medianprice=Vidējā cena
 transfercompare_avgprice=Vidējā cena
 
 match.type.league=Līgas spēle
@@ -192,6 +242,7 @@ matchOrder.AddMatchManually=Pievienot spēli
 matchOrder.swapPositions=Apmainīt pozīcijas
 matchOrder.options=Iespējas
 matchOrder.staminaDiscount=Izturības ietekme
+matchOrder.staminaDiscount.title=Sektora vērtējumi tiek samazināti saskaņā ar spēlētāja ieguldījumu tajos
 matchOrder.summary=Kopsavilkums
 
 #Skills
@@ -212,7 +263,9 @@ Set_pieces.abbr=NB
 
 PsicoTSI=PsicoTSI (vidēja forma)
 PsicoTSI.abbr=Psico
+HTMS_Ability=HTMS spējas
 HTMS_Ability.abbr=Spējas
+HTMS_Potential=HTMS potenciāls
 HTMS_Potential.abbr=Potenciāls
 
 PlayerCategory=Spēlētāja kategorija
@@ -302,6 +355,7 @@ Red_card=Sarkanā kartīte
 Red_card.abbr=Sar
 
 Speciality=Specialitāte
+Speciality.abbr=Spec
 
 Last_match=Pēdējā spēle
 Last_match.abbr=Pēd
@@ -347,6 +401,7 @@ JoinedSince=Pievienojies kopš
 JoinedSince.abbr=Kopš
 
 Hotlist=Karstais saraksts
+Hotlist.abbr=KS
 
 skilltable.youthplayer=jauniešu spēlētājs
 skilltable.rebought_youthplayer=atpirkts jauniešu spēlētājs
@@ -381,6 +436,8 @@ foxtrick.linkscustom.remove=Dzēst
 foxtrick.linkscustom.copy=Kopēt
 foxtrick.linkscustom.export=Eksportēt
 foxtrick.linkscustom.confirmremove=Vai tiešām dzēst?
+foxtrick.linkscustom.addtag=Pievienot birku
+foxtrick.linkscustom.tags=Birkas
 foxtrick.linkscustom.help=Palīdzība
 foxtrick.matches.income=Ienākumi\:
 foxtrick.tweaks.Birthdays=Dzimšanas dienas
@@ -427,6 +484,11 @@ CopyRatings.copied=Sniegums ir nokopēts starpliktuvē.
 CopyYouth.trainingReport=Kopēt treniņa ziņojumu
 CopyYouth.trainingReport.copied=Treniņa ziņojums ir nokopēts.
 CopyYouth.scoutComment=Kopēt skauta komentāru
+CopyYouth.scoutComment.copied=Skauta komentārs ir nokopēts.
+CopyYouth.playerSource=Kopēt spēlētāja pirmkodu
+CopyYouth.playerSource.copied=Spēlētāja pirmkods tika nokopēts.
+CopyYouth.fixturesSource=Kopēt spēļu kalendāra pirmkodu
+CopyYouth.fixturesSource.copied=Spēļu kalendāra pirmkods ir nokopēts.
 CopyYouth.goto=Doties uz %s
 
 MatchReportFormat.MatchReport=Spēles pārskats
@@ -438,7 +500,14 @@ MatchReportFormat.extraTime=Papildlaiks
 MatchReportFormat.penaltyShootOut=Pēcspēles sitieni
 MatchReportFormat.result=Rezultāts
 
+CopySelected.desc=Kopējiet iezīmēto ar Ctrl + C.
+SpecialPaste.desc=Ielīmējiet ar Shift + kreisais klikšķis.
 
+foxtrick.tweaks.youthclub=hattrick-youthclub.org
+foxtrick.tweaks.copyskilltable=Kopēt prasmju tabulu starpliktuvē(HT-ML formātā)
+foxtrick.tweaks.skilltablecopied=Prasmju tabula ir iekopēta starpliktuvē.
+foxtrick.tweaks.matchidcopied=Spēles ID ir iekopēts starpliktuvē.
+foxtrick.tweaks.postidcopied=Ziņojuma ID [post\=%s] ir iekopēts starpliktuvē.
 foxtrick.tweaks.postingcopied=Ziņojums %s ir pievienots starpliktuvei.
 foxtrick.tweaks.youthstatistics=Jauniešu statistika ht-ys.org
 
@@ -493,6 +562,7 @@ foxtrick.FlagCollectionToMap.HideMap=Slēpt karti
 foxtrick.FlagCollectionToMap.Africa=Āfrika
 foxtrick.FlagCollectionToMap.Asia=Āzija
 foxtrick.FlagCollectionToMap.Europe=Eiropa
+foxtrick.FlagCollectionToMap.MEast=Vidējie Austrumi
 foxtrick.FlagCollectionToMap.SAmerica=Dienvidamerika
 foxtrick.FlagCollectionToMap.World=Pasaule
 
@@ -508,6 +578,7 @@ Player.abbr=Spēlētājs
 Age=Vecums
 Age.abbr=Vec.
 Match=Spēle
+Series=Līga
 
 TransferCompare.abbr=DS
 Bookmark=Iegrāmatot
