*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8662 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -11,13 +11,16 @@
 # Thus, you need to include those %s entries into your text accordingly
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
-direction=ltr
+direction=Højre mod venstre
 #some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
 pluralFormRuleID=pluralFormRule1
 
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
-foxtrick.ForumTemplates.desc=Gør det muligt at ændre indlæg i konferencen til skabeloner der kan bruges senere
+foxtrick.LineupShortcut.desc=Tilføj en genvej til opstillingen på spillerens kamp historie
+foxtrick.LineupShortcut.HighlightPlayer.desc=Erstat HT fremhævning i opstillingen ved at fremhæv spiller med gul farve, når du har brugt genvej til at komme til opstillingen.
+foxtrick.SmallerPages.desc=Reducere størrelsen af nogle sider for at tilpasse dem til mindre skærme
+foxtrick.ForumTemplates.desc=Gør det muligt at ændre indlæg i konferencen til skabeloner der kan bruges senere (kan også bruges til redigering af mails,noter og Gæstebog)
 foxtrick.ForumTemplates.DefaultShow.desc=Shows or hides your templates by default
 foxtrick.ForumPreview.desc=Allows showing a post preview (Also works for mails)
 foxtrick.AddLeaveConfButton.desc=Tilføjer en  'Forlad konference' knap til hvert konference emne
