--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -729,7 +729,7 @@ foxtrick.staffconfirmationsack=Haluatko varmasti erottaa %num %kind?
 foxtrick.ntremoveconfirmation=Oletko varma, että haluat lisätä/poistaa tämän pelaajan joukkueestasi?
 foxtrick.confirmstripserver=Do you want to strip the hattrick server from the links to make the usable in forum?
 foxtrick.conferences.signaturetoggle=Allekirjoitus
-foxtrick.conferences.markunread=Merkkaa lukemattomat tästä
+foxtrick.conferences.markunread=Merkkaa lukemattomiksi tästä alkaen
 foxtrick.tweaks.selectplayer=Valitse pelaaja
 foxtrick.linkscustom.selecticon=Valitse ikoni
 foxtrick.linkscustom.addpersonallink=Lisää henkilökohtainen linkki
@@ -974,8 +974,8 @@ TickerAlert.enable=Salli
 TickerAlert.sound=Ääni
 
 # tickers
-ticker.type.welcome=Tervetuloa -viesti
-ticker.type.supporter=Kannatettavat joukkueet kirjautuu sisään
+ticker.type.welcome=Tervetuloa-viesti
+ticker.type.supporter=Kannatettava joukkue kirjautuu sisään
 ticker.type.forum=Foorumiviestit
 ticker.type.transfer=Siirtoinfo
 ticker.type.challenge=Haaste
@@ -1003,7 +1003,7 @@ sort.up=Ylös
 sort.down=Alas
 action.clearCache=Tyhjennä välimuisti
 action.clearCache.title=Tyhjentää Foxtrickin Xml-välimuistin. Foxtrick lataa lisätietoa Hattrickin servereiltä tarvitessaan. Se käyttää noita koneellesi tallennettuja tietoja kunnes suljet selaimen. Joskus tiedot voivat vanhentua. Tyhjennä välimuisti jos haluat, että Foxtick lataa tiedot uudelleen.
-featureHighlight.title=Korosta Foxtrick-ominaisuuksia
+featureHighlight.title=Korosta Foxtrick-toimintoja
 
 # fennec ui
 pageAction.rightSidebar=Näytä oikea sivupalkki
