--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -11,7 +11,7 @@
 # Thus, you need to include those %s entries into your text accordingly
 
 #declaring direction of the transation. ltr for left-to-right, rtl for right-to-left
-direction=Højre mod venstre
+direction=ltr
 #some strings use plural forms. for rules and pluralFormRuleID see https://developer.mozilla.org/en/Localization_and_Plurals
 pluralFormRuleID=pluralFormRule1
 
