*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8672 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -1,5 +1,7 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.language=Romana
+properties.translators=slader(552640)
 
 # Hints:
 # translate the right side of the = sign.
@@ -427,6 +429,7 @@ foxtrick.TeamStats.NotTransferListed.label=Nu este pe lista de transferuri
 foxtrick.TeamStats.ActivePlayers.label=Jucatori activi
 foxtrick.TeamStats.HomeGrownPlayers.label=Jucatori club mama
 foxtrick.TeamStats.PurchasedPlayers.label=Jucatori cumparati
+foxtrick.TeamStats.FilterFor=Filtru pentru
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -532,6 +535,7 @@ Filters.Form=Forma
 Filters.XP=Experienta
 Filters.specialty=Specialitate
 Filters.stars=Stele
+Filters.addFilterOptions=Adauga optiuni de filtrare
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -698,6 +702,8 @@ Last_stars_decline.abbr=Dif
 Last_position=Ultima pozitie
 Last_position.abbr=Poz
 #following string uses pluralForms
+Last_match_played_as_at=A jucat %1 min ca %2 in ultimul sau meci pe %3.
+Last_match_didnot_play=Nu a jucat inca.
 
 Bruised=Accidentat usor
 Bruised.abbr=Aus
